# check-rect-inside-polygon

./: README.md  _bootstrap.py  interactive.py  pyproject.toml
src/rect_check/: __init__.py  batch.py  geometry.py  input_helpers.py  interactive.py  reporting.py
src/rect_inside_polygon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
