[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "check-rect-inside-polygon"
version = "1.0.0"
description = "Kiểm tra hình chữ nhật trong đa giác (interactive)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "opencv-python>=4.8",
  "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]
